# cmd/patient-api/docs/swagger.json
@@ -226,7 +226,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/payment.Card"
+                                "$ref": "#/definitions/datastore.CreditCard"
                             }
                         }
                     },
@@ -259,7 +259,7 @@
                 "summary": "Add new credit card",
                 "parameters": [
                     {
-                        "description": "Token from Omise",
+                        "description": "Token from Omise and name of credit card",
                         "name": "AddCreditCardRequest",
                         "in": "body",
                         "required": true,
@@ -273,7 +273,7 @@
                         "description": "Created"
                     },
                     "400": {
-                        "description": "Failed to add credit card",
+                        "description": "Limited number of credit cards is reached",
                         "schema": {
                             "$ref": "#/definitions/server.ErrorResponse"
                         }
@@ -327,6 +327,35 @@
                 }
             }
         },
+        "datastore.CreditCard": {
+            "type": "object",
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_default": {
+                    "type": "boolean"
+                },
+                "last_4_digits": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "patient_id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "datastore.Glucose": {
             "type": "object",
             "properties": {
@@ -371,10 +400,14 @@
         "handler.AddCreditCardRequest": {
             "type": "object",
             "required": [
-                "card_token"
+                "card_token",
+                "name"
             ],
             "properties": {
                 "card_token": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -455,23 +488,6 @@
             "type": "object",
             "properties": {
                 "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "payment.Card": {
-            "type": "object",
-            "properties": {
-                "brand": {
-                    "type": "string"
-                },
-                "default": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "last_digits": {
                     "type": "string"
                 }
             }
